--- a/README
+++ b/README
@@ -3,24 +3,25 @@ listres
 X.Org widget resource lister
 
 Runtime requirements:
-  cygwin-1.5.25-15
-  libXaw7-1.0.4-2
-  libXmu6-1.0.4-1
-  libXt6-1.0.5-1
+  cygwin-1.7.0-67
+  libgcc1-4.3.4-3
+  libXaw7-1.0.7-1
+  libXmu6-1.0.5-1
+  libXt6-1.0.7-1
 
 Build requirements:
 (besides corresponding devel packages)
-  autoconf2.5-2.63-1
-  automake1.9-1.9.6-2
-  binutils-20080624-2
-  cygport-0.4.2-1
-  gawk-3.1.6-1
-  gcc-core-3.4.4-3
-  libtool-2.2.6a-1
-  make-3.81-1
-  pkg-config-0.23a-2
+  autoconf2.5-2.63-10
+  automake1.11-1.11-1
+  binutils-2.19.51-1
+  cygport-0.9.10-1
+  gawk-3.1.7-1
+  gcc4-core-4.3.4-3
+  libtool-2.2.7a-14
+  make-3.81-2
+  pkg-config-0.23b-10
   sed-4.1.5-2
-  xorg-util-macros-1.1.6-1
+  xorg-util-macros-1.3.0-1
 
 Canonical website:
   http://xorg.freedesktop.org/
@@ -31,28 +32,22 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack listres-1.0.1-X-src.tar.bz2
+  unpack listres-1.0.2-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./listres-1.0.1-X.cygport all
+  cygport ./listres-1.0.2-X.cygport all
 
 This will create:
-  /usr/src/listres-1.0.1-X-src.tar.bz2
-  /usr/src/listres-1.0.1-X.tar.bz2
+  /usr/src/listres-1.0.2-X-src.tar.bz2
+  /usr/src/listres-1.0.2-X.tar.bz2
 
 -------------------------------------------
 
-Files included in the binary package:
-
-  /usr/bin/listres.exe
-  /usr/share/doc/listres-1.0.1/COPYING
-  /usr/share/doc/listres-1.0.1/ChangeLog
-  /usr/share/man/man1/listres.1.gz
-
-------------------
-
 Port Notes:
+
+----- version 1.0.2-1 -----
+Version bump for X11R7.5.
 
 ----- version 1.0.1-2 -----
 Rebuilt.
